overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1  # Increase replica count for dev
  template:
    spec:
      containers:
        - name: nginx
          image: tejirih/my-app:latest
